Bug 487104 - Radio and checkbox buttons are low-res on Windows
Summary: Radio and checkbox buttons are low-res on Windows
Status: RESOLVED FIXED
Alias: None
Product: filelight
Classification: Applications
Component: general (other bugs)
Version First Reported In: 23.04.0
Platform: Microsoft Windows Microsoft Windows
: NOR normal
Target Milestone: ---
Assignee: Unassigned bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2024-05-16 13:38 UTC by TripleCamera
Modified: 2024-07-11 10:31 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments
A screenshot of the "Scanning" and "Appearance" tabs (52.30 KB, image/png)
2024-05-16 13:38 UTC, TripleCamera
Details
Another screenshot in the latest version (109.24 KB, image/png)
2024-06-28 07:36 UTC, TripleCamera
Details
Another screenshot in the latest version, in light mode (105.38 KB, image/png)
2024-06-28 07:51 UTC, TripleCamera
Details
Another screenshot in the latest version, under 100% scaling factor (46.32 KB, image/png)
2024-07-09 00:41 UTC, TripleCamera
Details

Note You need to log in before you can comment on or make changes to this bug.
Description TripleCamera 2024-05-16 13:38:54 UTC
Created attachment 169533 [details]
A screenshot of the "Scanning" and "Appearance" tabs

SUMMARY
Radio and checkbox buttons are low-res on Windows.

STEPS TO REPRODUCE
1. Open Filelight.
2. Click Settings → Configure Filelight.

OBSERVED RESULT
Radio and checkbox buttons are low-res.

EXPECTED RESULT
Radio and checkbox buttons should be high-res.

SOFTWARE/OS VERSIONS
Windows: Windows 11 23H2
KDE Frameworks Version: 5.105.0
Qt Version: 5.15.9
Filelight Version: 23.04.0

ADDITIONAL INFORMATION
I have a global scaling of 250%, not sure if that causes the bug.
Comment 1 Harald Sitter 2024-06-26 10:06:59 UTC
Please update to latest version and try again. Chances are this got fixed by a Qt upgrade. If it doesn't help I'd like to know what display resolution and scaling you are using.
Comment 2 TripleCamera 2024-06-28 07:36:32 UTC
Created attachment 171117 [details]
Another screenshot in the latest version
Comment 3 TripleCamera 2024-06-28 07:41:01 UTC
(In reply to Harald Sitter from comment #1)
> Please update to latest version and try again. Chances are this got fixed by
> a Qt upgrade. If it doesn't help I'd like to know what display resolution
> and scaling you are using.

Okay, I upgraded to the latest version, 24.05.1. The good news is that this is fixed indeed. The bad news is that now they look a little ugly. I just uploaded a new screenshot.

Besides, a bunch of other small issues appear (eg. the tabs are borderless). Should I open a new bug report for them?
Comment 4 TripleCamera 2024-06-28 07:51:29 UTC
Created attachment 171119 [details]
Another screenshot in the latest version, in light mode
Comment 5 TripleCamera 2024-06-28 07:56:27 UTC
I just uploaded another screenshot of Filelight in light mode. All these radio and checkbox buttons looks fine, except that the slider looks a bit small. Now it seems that the biggest problem lies in dark mode support.
Comment 6 Harald Sitter 2024-07-08 08:59:08 UTC
what display resolution and scaling you are using?
Comment 7 TripleCamera 2024-07-09 00:40:31 UTC
(In reply to Harald Sitter from comment #6)
> what display resolution and scaling you are using?

My display resolution is 3840x2400 and my scaling factor is 250%.
Besides, I will upload another screenshot under 100% scaling factor.
Comment 8 TripleCamera 2024-07-09 00:41:48 UTC
Created attachment 171490 [details]
Another screenshot in the latest version, under 100% scaling factor
Comment 9 Bug Janitor Service 2024-07-09 12:23:41 UTC
A possibly relevant merge request was started @ https://invent.kde.org/packaging/craft-blueprints-kde/-/merge_requests/934
Comment 10 Bug Janitor Service 2024-07-09 12:24:08 UTC
A possibly relevant merge request was started @ https://invent.kde.org/utilities/filelight/-/merge_requests/142
Comment 11 Harald Sitter 2024-07-09 12:27:31 UTC
Git commit 986af27704b3335326999cf85863c97b38e5fc42 by Harald Sitter.
Committed on 09/07/2024 at 12:26.
Pushed by sitter into branch 'master'.

pull breeze style into filelight

it's a more reliable style

M  +2    -0    kde/kdeutils/filelight/filelight.py

https://invent.kde.org/packaging/craft-blueprints-kde/-/commit/986af27704b3335326999cf85863c97b38e5fc42
Comment 12 Harald Sitter 2024-07-10 08:48:52 UTC
Git commit 29e76d16f160a34d0885edce84ac7c01da8b7b6d by Harald Sitter.
Committed on 09/07/2024 at 12:16.
Pushed by sitter into branch 'master'.

windows: force sane style, color, icons

there's various weird issues to do with the defaults in frameworks not
kicking in reliably and debugging this is a bit of a nightmare. instead
force suitable values

this notably fixes:

- radio buttons, check boxes and sliders being incorrectly scaled, by
using the breeze style
- the icons not coloring correctly, by forcing breeze icon theme
- the colors not adapting correctly to system theme changes, by ensuring
we have a kcolorschememanager

M  +1    -0    CMakeLists.txt
M  +15   -0    src/main.cpp

https://invent.kde.org/utilities/filelight/-/commit/29e76d16f160a34d0885edce84ac7c01da8b7b6d
Comment 13 TripleCamera 2024-07-11 00:34:48 UTC
I just tried out version 1403 and it looks beautiful. Thank you!
Comment 14 Harald Sitter 2024-07-11 10:31:52 UTC
Git commit 8f68f8050bc69b65cd34de04b2621a134af965d8 by Harald Sitter.
Committed on 10/07/2024 at 08:49.
Pushed by sitter into branch 'release/24.05'.

windows: force sane style, color, icons

there's various weird issues to do with the defaults in frameworks not
kicking in reliably and debugging this is a bit of a nightmare. instead
force suitable values

this notably fixes:

- radio buttons, check boxes and sliders being incorrectly scaled, by
using the breeze style
- the icons not coloring correctly, by forcing breeze icon theme
- the colors not adapting correctly to system theme changes, by ensuring
we have a kcolorschememanager
(cherry picked from commit 29e76d16f160a34d0885edce84ac7c01da8b7b6d)

M  +1    -0    CMakeLists.txt
M  +15   -0    src/main.cpp

https://invent.kde.org/utilities/filelight/-/commit/8f68f8050bc69b65cd34de04b2621a134af965d8