windows: force sane style, color, icons

there's various weird issues to do with the defaults in frameworks not
kicking in reliably and debugging this is a bit of a nightmare. instead
force suitable values

this notably fixes:

- radio buttons, check boxes and sliders being incorrectly scaled, by
using the breeze style
- the icons not coloring correctly, by forcing breeze icon theme
- the colors not adapting correctly to system theme changes, by ensuring
we have a kcolorschememanager

BUG: 487104
(cherry picked from commit 29e76d16f160a34d0885edce84ac7c01da8b7b6d)